--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-table": "^8.21.3",
+    "@tiptap/core": "^3.15.3",
     "@tiptap/extension-font-family": "^3.15.3",
     "@tiptap/extension-image": "^3.15.3",
     "@tiptap/extension-placeholder": "^3.15.3",
@@ -61,6 +62,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
