chore: rename project to "Vita Kinetic Dashboard"

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mikefiremerritt_dashboard",
+  "name": "vita_kinetic_dashboard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
